<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ken2</groupId>
  <artifactId>ken2</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>ken2</name>
  <url>http://maven.apache.org</url>

<properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <javafx.version>22.0.1</javafx.version>
</properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>22.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>22.0.1</version>
        </dependency>
          <!-- Deeplearning4j Core -->
          <dependency>
              <groupId>org.deeplearning4j</groupId>
              <artifactId>deeplearning4j-core</artifactId>
              <version>1.0.0-M2.1</version>
          </dependency>

          <!-- ND4J Backend -->
          <dependency>
              <groupId>org.nd4j</groupId>
              <artifactId>nd4j-native-platform</artifactId>
              <version>1.0.0-M2.1</version>
          </dependency>

  </dependencies>

<build>
    <plugins>
        <plugin>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-maven-plugin</artifactId>
            <version>0.0.8</version>
            <configuration>
                <mainClass>com.ken2.ui.MainApp</mainClass>
                <options>
                    <option>--module-path</option>
                    <option>${env.JAVAFX_HOME}/lib</option> 
                    <option>--add-modules</option>
                    <option>javafx.controls,javafx.fxml</option>
                </options>
            </configuration>
        </plugin>
    </plugins>
</build>



</project>
